--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -19,12 +22,16 @@
         </activity>
         <activity
             android:name=".capture.CaptureActivity"
-            android:label="@string/title_activity_capture" >
+            android:label="@string/title_activity_capture"
+            android:screenOrientation="landscape" android:theme="@style/AppTheme.Fullscreen">
+            <!-- Note that the CaptureActivity appears to user as properly rotating,
+            	 although it is marked as landscape only.
+                 See the source code CaptureActivity.java for why.  -->
         </activity>
         <activity
             android:name=".editor.AboutActivity"
             android:label="@string/title_activity_about" >
         </activity>
     </application>
-        
+    
 </manifest>
