Reworked with Camera app Intent. It works with a thumbnail (150x200, 150x240, 180x300, etc.) sized pictures, but to get a full size images, I leaned that there are a lot of _variations_ I need to take care of; yet another android divergence...

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.at.sabre.alissa.numberplace"
-    android:versionCode="1"
-    android:versionName="0.60" >
+    android:versionCode="2"
+    android:versionName="0.61" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -22,11 +22,7 @@
         </activity>
         <activity
             android:name=".capture.CaptureActivity"
-            android:label="@string/title_activity_capture"
-            android:screenOrientation="landscape" android:theme="@style/AppTheme.Fullscreen">
-            <!-- Note that the CaptureActivity appears to user as properly rotating,
-            	 although it is marked as landscape only.
-                 See the source code CaptureActivity.java for why.  -->
+            android:label="@string/title_activity_capture">
         </activity>
         <activity
             android:name=".editor.AboutActivity"
