--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.at.sabre.alissa.numberplace"
     android:versionCode="2"
-    android:versionName="0.64" >
+    android:versionName="0.70" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:allowBackup="true" android:description="@string/app_description">
         <activity android:name=".editor.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
